--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,21 @@ jobs:
       - yarn test
       - yarn docs
 
-    - name: fossa
+    # - name: fossa
+    #   before_script:
+    #     - "curl -H 'Cache-Control: no-cache' https://raw.githubusercontent.com/fossas/fossa-cli/fc60c6631a5d372d5a45fea35e31665b338f260d/install.sh | sudo bash"
+    #   script:
+    #     - fossa init
+    #     - fossa analyze --server-scan
+    #     - fossa test
+
+    - name: JSON Test Suite
       before_script:
-        - "curl -H 'Cache-Control: no-cache' https://raw.githubusercontent.com/fossas/fossa-cli/fc60c6631a5d372d5a45fea35e31665b338f260d/install.sh | sudo bash"
+        - "curl https://wasmtime.dev/install.sh -sSf | bash"
       script:
-        - fossa init
-        - fossa analyze --server-scan
-        - fossa test
+        - cd utils/testsuite_helper && yarn build
+        - git clone https://github.com/ashutoshvarma/JSONTestSuite.git testsuite
+        - rm testsuite/parsers/test_as_json/index.wasm
+        - cp build/index.wasm testsuite/parsers/test_as_json/index.wasm
+        - echo '["Assemblyscript-JSON"]' > filter.json 
+        - python3 run_tests.py --filter=only.json  
